--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta charset="UTF-8" />
   <title>Ramakrishna Polagani | PLM Techno-functional Architect • Business Systems Analyst</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Ramakrishna (RK) Polagani - PLM Techno-functional Architect, and Business Systems Analyst specializing in Teamcenter, Oracle Agile PLM, and end-to-end PLM–ERP–MES integrations." />
+  <meta name="description" content="Ramakrishna (RK) Polagani - PLM Techno-functional Architect, and Business Systems Analyst specializing in Siemens Teamcenter, Oracle Agile PLM, PTC Windchill, MechWorks PDM and end-to-end PLM–ERP–MES integrations." />
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="images/favicon-rk-logo.png">
@@ -25,7 +25,7 @@
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Ramakrishna Polagani | PLM Techno-functional Architect & Business Systems Analyst" />
-  <meta property="og:description" content="Results-driven PLM Techno-functional Architect and Business Systems Analyst with 14+ years of experience in Teamcenter, Oracle Agile PLM, Windchill, MechWorks PDM, Syspro ERP, and complex PLM–ERP–ALM integrations." />
+  <meta property="og:description" content="Results-driven PLM Techno-functional Architect and Business Systems Analyst with 14+ years of experience in Siemens Teamcenter, Oracle Agile PLM, PTC Windchill, MechWorks PDM, Oracle ERP, Syspro ERP, Polarion ALM, and complex PLM–ERP–ALM–MES integrations." />
   <meta property="og:url" content="https://rkpolagani.com/" />
   <meta property="og:image" content="https://rkpolagani.com/images/favicon-rk-logo.png" />
   <meta property="og:image:width" content="800" />
@@ -46,7 +46,7 @@
     "alternateName": "RK Polagani",
     "url": "https://rkpolagani.com/",
     "jobTitle": "PLM Techno-functional Architect & Business Systems Analyst",
-    "description": "Results-driven PLM Techno-functional Architect specializing in Siemens Teamcenter, Oracle Agile PLM, Windchill, MechWorks PDM, Syspro ERP, and end-to-end PLM–ERP–ALM–MES integrations.",
+    "description": "Results-driven PLM Techno-functional Architect and Business Systems Analyst specializing in Siemens Teamcenter, Oracle Agile PLM, PTC Windchill, MechWorks PDM, Syspro ERP, Polarion ALM, and end-to-end PLM–ERP–ALM–MES integrations.",
     "sameAs": [
       "https://www.linkedin.com/in/ramakrishna-polagani-67297ab8/"
     ]
