--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
   }
   </script>
 
+  <link rel="icon" type="image/png" href="images/favicon-rk-logo.png" id="favicon">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
