--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
         <a href="#contact">Contact</a>
         <a href="travel.html">Travelling</a>
         <a href="sports.html">Sports</a>
+        <a href="blogs.html">Blog</a>
       </nav>
     </div>
 
