--- a/blogs.html
+++ b/blogs.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>RK Polagani | Blog & Articles</title>
+  <title>RK Polagani | Blogs & Articles</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Blog posts and articles by Ramakrishna (RK) Polagani on PLM, integrations, travel, sports, and personal reflections." />
   <link rel="icon" type="image/png" href="images/favicon-rk-logo.png" id="favicon">
@@ -26,7 +26,7 @@
         <a href="index.html#contact">Contact</a>
         <a href="travel.html">Travelling</a>
         <a href="sports.html">Sports</a>
-        <a href="blogs.html" class="active">Blog</a>
+        <a href="blogs.html" class="active">Blogs</a>
       </nav>
     </div>
   </div>
@@ -37,7 +37,7 @@
   <!-- Hero / Intro -->
   <section class="reveal">
     <div class="card" style="max-width: 780px; margin: 0 auto;">
-      <h1 style="margin-bottom:10px;">Blog &amp; Articles</h1>
+      <h1 style="margin-bottom:10px;">Blogs &amp; Articles</h1>
       <p class="card-subtitle">
         Longer stories and reflections that don’t fit into a LinkedIn post.
       </p>
@@ -145,7 +145,7 @@
 
 <footer>
   <div class="container">
-    © <span id="year"></span> Ramakrishna (RK) Polagani · Blog
+    © <span id="year"></span> Ramakrishna (RK) Polagani · Blogs
   </div>
 </footer>
 
