--- a/blogs.html
+++ b/blogs.html
@@ -7,6 +7,46 @@
   <meta name="description" content="Blog posts and articles by Ramakrishna (RK) Polagani on PLM, integrations, travel, sports, and personal reflections." />
   <link rel="icon" type="image/png" href="images/favicon-rk-logo.png" id="favicon">
   <link rel="stylesheet" href="style.css">
+
+  <!-- Page-specific polish (match Sports layout) -->
+  <style>
+    .blogs-hero {
+      max-width: 780px;
+      margin: 0 auto;
+    }
+
+    .blogs-hero h1 {
+      font-size: 2.1rem;
+    }
+
+    /* Blog cards grid – same rhythm as sports/travel */
+    .blog-list {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      gap: 16px;
+      margin-top: 12px;
+    }
+
+    /* Inner cards inside the list – lighter, like sports cards */
+    .blog-list .card {
+      box-shadow: none;
+    }
+
+    .blog-list h3 {
+      margin-top: 0;
+      font-size: 1.05rem;
+    }
+
+    /* Make blog titles look like headings, not default blue links */
+    .blog-list h3 a {
+      color: inherit;
+      text-decoration: none;
+    }
+
+    .blog-list h3 a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
 
@@ -36,13 +76,13 @@
 
   <!-- Hero / Intro -->
   <section class="reveal">
-    <div class="card" style="max-width: 780px; margin: 0 auto;">
+    <div class="card blogs-hero">
       <h1 style="margin-bottom:10px;">Blogs &amp; Articles</h1>
       <p class="card-subtitle">
         Longer stories and reflections that don’t fit into a LinkedIn post.
       </p>
       <p>
-        This space is for writing about the things I care about — PLM and integrations,
+        This space is for writing about the things I care about PLM and integrations,
         working across teams and countries, travel journeys like Leh Ladakh, and what
         sports have taught me about focus and discipline.
       </p>
@@ -57,19 +97,21 @@
   <section class="reveal">
     <div class="section-caption">Latest Posts</div>
     <div class="card">
-      <div class="travel-list">
+      <h2>Latest Posts</h2>
+
+      <div class="blog-list">
 
         <!-- Post 1 -->
         <div class="card">
           <h3>
             <a href="blog-001-leh-ladakh.html">
-              My 2017 Solo Trip to Leh Ladakh — A Journey That Changed Me
+              My 2017 Solo Trip to Leh Ladakh  A Journey That Changed Me
             </a>
           </h3>
           <div class="item-meta">Travel · Reflection</div>
           <p>
             How a solo journey from Hyderabad to the mountains of Ladakh shifted my
-            perspective on risk, comfort zones, and people — and why I still think
+            perspective on risk, comfort zones, and people and why I still think
             about that trip whenever I make big decisions.
           </p>
         </div>
@@ -97,7 +139,7 @@
           </h3>
           <div class="item-meta">Sports · Mindset</div>
           <p>
-            From SRH chases to Blue Jays games and F1 races — the patterns and
+            From SRH chases to Blue Jays games and F1 races the patterns and
             mindsets that translate directly into how I approach projects and change.
           </p>
         </div>
@@ -106,7 +148,7 @@
     </div>
   </section>
 
-  <!-- Optional: Categories / Sections -->
+  <!-- Topics -->
   <section class="reveal">
     <div class="section-caption">Topics</div>
     <div class="card">
@@ -127,7 +169,7 @@
         <div>
           <h2 style="margin-top:0;">Travel, Sports &amp; Life</h2>
           <p>
-            More personal writing — solo trips, moving countries, following
+            More personal writing solo trips, moving countries, following
             sports, and how all of that influences how I think about people,
             teams, and decisions.
           </p>
@@ -168,7 +210,7 @@
 <!-- Theme toggle button -->
 <button class="theme-toggle-btn" id="themeToggle" aria-label="Toggle dark mode">☾</button>
 
-<!-- Theme toggle script (same as other pages) -->
+<!-- Theme toggle script -->
 <script>
   const body = document.body;
   const toggleBtn = document.getElementById('themeToggle');
