--- a/index.html
+++ b/index.html
@@ -98,9 +98,10 @@
 
           <div class="tag-list">
             <span class="tag">Teamcenter and Agile PLM</span>
-            <span class="tag">PLM - ERP - ALM - MES integration</span>
+            <span class="tag">PLM-ERP-ALM-MES integration</span>
             <span class="tag">Digital thread and traceability</span>
             <span class="tag">Business analysis and architecture</span>
+            <span class="tag">Business process transformation</span>
           </div>
 
           <a href="#projects" class="pill" style="margin-top:8px;display:inline-block;">
@@ -122,10 +123,10 @@
           <div class="hero-card">
             <h3>What I focus on</h3>
             <ul>
-              <li>End to end PLM implementations, from discovery and architecture to go live and support.</li>
-              <li>Integrations that keep parts, BOMs and changes in sync between PLM, ERP, ALM, MES and QMS.</li>
-              <li>Change and configuration management that supports regulated and complex products.</li>
-              <li>Solution design that balances business needs, technical reality and long term supportability.</li>
+              <li>Delivering end-to-end PLM implementations, from discovery and architecture through go-live and support.</li>
+              <li>Designing integrations that keep parts, BOMs and changes aligned across PLM, ERP, ALM, MES and QMS..</li>
+              <li>Strengthening change and configuration management for regulated and complex product environments.</li>
+              <li>Balancing business needs, technical constraints and long-term maintainability in solution design.</li>
             </ul>
           </div>
         </div>
@@ -145,30 +146,19 @@
         <p class="card-subtitle">A quick view of my background and how I like to work.</p>
 
         <p>
-          I am a PLM techno-functional architect and business systems analyst with more than
-          fourteen years of experience delivering PLM implementations and integrations across
-          medical devices, hi-tech, aerospace, semiconductor, industrial equipment, consumer goods
-          and healthcare.
+          I’m a PLM techno-functional architect and business systems analyst with over fourteen years of experience delivering PLM implementations and integrations across medical devices, hi-tech, aerospace, semiconductors, industrial equipment, consumer goods and healthcare.
         </p>
 
         <p>
-          My core strengths are in Siemens Teamcenter, Oracle Agile PLM, PTC Windchill and
-          MechWorks PDM, combined with hands-on integration work using T4X and T4O, Oracle
-          Fusion Middleware, APIs and Power Platform. I design integration patterns that connect PLM
-          with ERP systems such as Oracle EBS, Syspro, SAP and Microsoft Dynamics, as well as ALM,
-          MES and QMS platforms.
+          My core expertise covers Siemens Teamcenter, Oracle Agile PLM, PTC Windchill and MechWorks PDM, supported by hands-on integration experience using T4X/T4O, Oracle Fusion Middleware, APIs and Power Platform. I design integration patterns that connect PLM with ERP systems such as Oracle EBS, Syspro, SAP and Microsoft Dynamics, as well as ALM, MES and QMS solutions.
         </p>
 
         <p>
-          I enjoy working in the space between business and IT. I run workshops, clarify requirements,
-          perform fit gap analysis and then work with technical teams to make sure solutions are practical,
-          testable and supportable. I like simplifying complex landscapes and aligning tools, data and
-          processes so teams can focus on delivery instead of constantly firefighting integrations.
+          I enjoy working in the space between business and technology running workshops, clarifying requirements, performing fit-gap analysis and working with technical teams to ensure solutions are practical, testable and supportable. I like simplifying complex landscapes and aligning tools, data and processes so teams can deliver without constantly firefighting integrations.
         </p>
 
         <p>
-          Outside work I enjoy travelling and following sports. Both influence how I think about teamwork,
-          resilience and continuous improvement when I work with cross functional and global teams.
+          Outside work I enjoy travelling and following sports. Both shape how I think about collaboration, resilience and continuous improvement when working with cross-functional and global teams.
         </p>
       </div>
     </section>
@@ -184,11 +174,11 @@
               <div class="item-title">Business Systems Analyst / PLM Functional Lead</div>
               <div class="item-meta">StarFish Medical, Canada, Sep 2023 - present</div>
               <ul>
-                <li>Lead cross functional workshops with engineering, manufacturing, quality and finance to define PLM and PDM strategies and digital operations roadmaps.</li>
-                <li>Design functional architecture and integration patterns connecting MechWorks PDM, Syspro ERP, QMS and ALM (Polarion) for end to end product data flow.</li>
-                <li>Support and enhance MechWorks PDM, document control and change workflows to improve traceability and regulatory compliance.</li>
-                <li>Develop requirements, use cases, RTMs and UAT plans and coordinate testing and deployment with internal and vendor teams.</li>
-                <li>Use SharePoint, Microsoft 365, Power Automate and Power Platform for workflow automation, collaboration and reporting.</li>
+                <li>Lead cross-functional workshops with engineering, manufacturing, quality and finance to define PLM and PDM strategy and digital operations roadmap.</li>
+                <li>Design functional architecture and integration patterns connecting MechWorks PDM, Syspro ERP, QMS and ALM (Polarion) for end-to-end product data flow.</li>
+                <li>Enhance MechWorks PDM, document control and change workflows to improve traceability and regulatory compliance.</li>
+                <li>Develop requirements, use cases, RTMs and UAT plans; coordinate testing and deployments with internal and vendor teams.</li>
+                <li>Use SharePoint, Microsoft 365, Power Automate and Power Platform for workflow automation and reporting.</li>
               </ul>
             </div>
 
@@ -211,7 +201,7 @@
                 <li>Implemented and supported Oracle Agile PLM 9.3.x including configuration, custom extensions, web services and integrations with Oracle EBS.</li>
                 <li>Developed BMIDE extensions and services in Siemens Teamcenter to support complex change workflows and integration scenarios.</li>
                 <li>Led data migration activities from legacy systems into Agile PLM, including data cleansing, validation and performance optimization.</li>
-                <li>Authored high level and low level design documents and interface designs, ensuring traceability from business requirements to technical implementation.</li>
+                <li>Authored HLDs, LLDs and interface designs ensuring clear traceability from requirements to implementation.</li>
               </ul>
             </div>
           </div>
@@ -276,7 +266,7 @@
         </div>
 
         <ul class="pill-list" style="margin-top:14px;">
-          <li class="pill">PLM - ERP - ALM - MES integrations</li>
+          <li class="pill">PLM-ERP-ALM-MES integrations</li>
           <li class="pill">eBOM and mBOM and change management</li>
           <li class="pill">Compliance and traceability</li>
           <li class="pill">Solution architecture and governance</li>
