--- a/index.html
+++ b/index.html
@@ -455,5 +455,11 @@
   updateParallax();
 </script>
 
+<button class="back-to-top-btn" id="backToTop" aria-label="Back to top">↑</button>
+<button class="theme-toggle-btn" id="themeToggle" aria-label="Toggle dark mode">☾</button>
+
+<script src="main.js"></script>
 </body>
 </html>
+
+
