--- a/index.html
+++ b/index.html
@@ -455,9 +455,13 @@
   updateParallax();
 </script>
 
+<!-- Back to top button (optional but recommended on all pages) -->
 <button class="back-to-top-btn" id="backToTop" aria-label="Back to top">↑</button>
+
+<!-- Theme toggle button -->
 <button class="theme-toggle-btn" id="themeToggle" aria-label="Toggle dark mode">☾</button>
 
+<!-- Main JS -->
 <script src="main.js"></script>
 </body>
 </html>
