--- a/blog-001-plm-journey.html
+++ b/blog-001-plm-journey.html
@@ -238,6 +238,9 @@
   window.addEventListener('scroll', updateParallax);
   updateParallax();
 </script>
+<button class="back-to-top-btn" id="backToTop" aria-label="Back to top">↑</button>
+<button class="theme-toggle-btn" id="themeToggle" aria-label="Toggle dark mode">☾</button>
 
+<script src="main.js"></script>
 </body>
 </html>
