--- a/index.html
+++ b/index.html
@@ -75,6 +75,13 @@
         <a href="sports.html">Sports</a>
         <a href="blogs.html">Blogs</a>
       </nav>
+      
+     <!-- New: Toronto time + weather -->
+      <div class="toronto-meta">
+        <span id="toronto-time"></span>
+        &nbsp;|&nbsp;
+        <span id="toronto-weather"></span>
+      </div> 
     </div>
 
        <!-- Hero: two-column layout -->
